Revision history for {{$dist->name}}

{{$NEXT}}
    New features:
    * ->with_index

0.011     2017-03-09 22:47:41+08:00 Asia/Kuala_Lumpur
    Bug fixes:
    * Base64 decode - too many parameters were being passed to MIME::Base64::decode_base64

    New features:
    * 'UTF-8' is now supported as an alias for utf8 in ->encode
    and ->decode.
    * ->catch for continuing after errors
    * ->as_string and ->as_list / ->as_arrayref Future-returning methods
    * ->prefix and ->suffix

0.010     2017-03-04 14:20:06+08:00 Asia/Kuala_Lumpur
    New features:
    * ->say and ->print methods

0.009     2017-03-04 00:00:46+08:00 Asia/Kuala_Lumpur
    New features:
    * ->encode and ->decode with a few basic transcoders

0.008     2017-03-03 23:03:06+08:00 Asia/Kuala_Lumpur
    Bug fixes:
    * ->distinct now works more like it's described

    New features:
    * ->ordered_futures method
    * ->distinct_until_changed

0.007     2017-02-12 18:51:17+08:00 Asia/Kuala_Lumpur
    Bug fixes:
    * Discard values when finishing ->combine_latest and ->with_latest_from
    * Better protection against finish-after-failure errors

0.006     2017-01-29 01:06:51+08:00 Asia/Kuala_Lumpur
    API changes:
    * Ryu::Exception->future renamed to ->as_future, old method is
    still available but will be dropped by 1.0.

    New features:
    * ->source and ->value for Ryu::Observable

0.005     2017-01-16 20:26:27+08:00 Asia/Kuala_Lumpur
    New features:
    * ->set_numeric and ->set_string for Ryu::Observable

    Cosmetic changes:
    * Automatic labels for operators now omit the Ryu::Source:: prefix

0.004     2017-01-16 02:34:22+08:00 Asia/Kuala_Lumpur
    API changes:
    * ->await now returns the source, not the completion Future.

    Bug fixes:
    * ->await didn't, instead it delegated to Future's ->await which provides
    no guarantees about readiness when it returns. Fixed by looping until the
    Future is ready.

0.003     2017-01-16 01:38:09+08:00 Asia/Kuala_Lumpur